Fix darkmode scrollbar color on Windows

--- a/source/css/_colors.styl
+++ b/source/css/_colors.styl
@@ -1,4 +1,6 @@
 :root {
+  color-scheme: light dark;
+
   --body-bg-color: $body-bg-color;
   --content-bg-color: $content-bg-color;
   --card-bg-color: $card-bg-color;
